--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -93,7 +93,9 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme on <a href="{{ site.github_repo }}">GitHub</a> |
+                    Theme on <a href="{{ site.github_repo }}">GitHub</a>
+                    <br>
+                    <a href="http://www.beian.miit.gov.cn/">-浙ICP备20002139号</a>-1-心声分享
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
